fix navigation arrow when collapsing sidebar

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -139,3 +139,12 @@
     display: flex;
   }
 }
+
+.collapseMenuItemCollapsed {
+  display: none;
+
+  @media (min-width: breakpoint.$desktop) {
+    display: flex;
+    transform: rotate(180deg);
+  }
+}
